multi-frontend-backend-cloud/kubernetes-s3/canary/angular-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-canary-deployment
  labels:
    app: angular-canary-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      name: angular-canary
      labels:
        app: angular-canary-app
    spec:
      containers:
        - name: angular-canary-container
          image: serhiion/angular-s3:2019-09-22T13-58-23Z
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: angular-canary-app
