multi-frontend-backend-cloud/kubernetes-s3/canary/angularjs-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angularjs-canary-deployment
  labels:
    app: angularjs-canary-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      name: angularjs-canary
      labels:
        app: angularjs-canary-app
    spec:
      containers:
        - name: angularjs-canary-container
          image: serhiion/angularjs-s3:2019-09-22T08-54-48Z
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: angularjs-canary-app
